<resources>
    <string name="app_name">AdoteMe</string>

    <string-array name="estados_array">
        <item>Selecione o estado</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <string name="app_name_debug">AdoteMe Debug</string>
    <string name="logo_ong">Logo da ONG</string>
    <string name="nome_ong">Cantinho Animal</string>
    <string name="endereco_completo">Rua da Felicidade - Guarulhos - SP</string>
    <string name="telefone_formatado">Tel: (11) 0000-0000 / 9 0000-0000</string>
    <string name="instagram_usuario">Instagram: @cantinho.animal123</string>
    <string name="pix1_formatado">Pix (celular): 11900000000</string>
    <string name="pix2_formatado">Pix (e-mail): ong@gmail.com</string>
    <string name="editar_informacoes">Editar informações da ONG</string>
    <string name="adicionar_animal">Adicionar novo animal</string>
    <string name="excluir" />
    <string name="lista_animais">lista_animais</string>

    <string name="selecione_estado">Estado</string>

    <string name="Sexo">Sexo</string>

    <string name="Castrado">Castrado</string>

</resources>



